[gd_scene load_steps=13 format=2]

[ext_resource path="res://IMAGENS_ICONES/back.png" type="Texture" id=1]
[ext_resource path="res://IMAGENS_ICONES/plus_minus.png" type="Texture" id=2]
[ext_resource path="res://others/BigFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://SCENE/FullScreenCard.gd" type="Script" id=4]
[ext_resource path="res://SCENE/CardSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://IMAGENS_ICONES/FAV/FAV1.png" type="Texture" id=6]
[ext_resource path="res://IMAGENS_ICONES/eye.png" type="Texture" id=7]
[ext_resource path="res://SCENE/THEME.tres" type="Theme" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 100 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120, 100 )

[sub_resource type="CircleShape2D" id=2]
radius = 75.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 120, 100 )

[node name="FullScreenCard" type="Node2D"]
script = ExtResource( 4 )

[node name="BG" type="ColorRect" parent="."]
visible = false
margin_left = -6.0
margin_top = -16.0
margin_right = 1923.0
margin_bottom = 1090.0
color = Color( 0.105882, 0.0784314, 0.392157, 1 )

[node name="CardSprite" parent="." instance=ExtResource( 5 )]
position = Vector2( 357.971, 1076.27 )
rotation = -1.5708

[node name="B_RETURN" type="TouchScreenButton" parent="."]
position = Vector2( 1, 882 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="B_EYE" type="TouchScreenButton" parent="."]
position = Vector2( 0, 681 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="B_L_PLUS" type="TouchScreenButton" parent="."]
position = Vector2( 44, 89 )
shape = SubResource( 2 )
shape_centered = false

[node name="B_O_PLUS" type="TouchScreenButton" parent="."]
position = Vector2( 42, 394 )
shape = SubResource( 2 )
shape_centered = false

[node name="B_L_MINUS" type="TouchScreenButton" parent="."]
position = Vector2( 326, 89 )
shape = SubResource( 2 )
shape_centered = false

[node name="B_O_MINUS" type="TouchScreenButton" parent="."]
position = Vector2( 327, 400 )
shape = SubResource( 2 )
shape_centered = false

[node name="B_FAV" type="TouchScreenButton" parent="."]
position = Vector2( 120, 581 )
shape = SubResource( 3 )
shape_centered = false

[node name="Sprite_PlusMinus" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite_Back" type="Sprite" parent="."]
position = Vector2( 35, 897 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite_Eye" type="Sprite" parent="."]
position = Vector2( 75, 693 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
centered = false

[node name="FAV_IMG" type="Sprite" parent="."]
position = Vector2( 121, 578 )
rotation = -1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="OptionButton" type="OptionButton" parent="."]
anchor_left = 1000.0
anchor_top = 1000.0
anchor_right = 1000.0
anchor_bottom = 1000.0
margin_left = 254.0
margin_top = 1069.0
margin_right = 835.0
margin_bottom = 1150.0
grow_horizontal = 0
grow_vertical = 0
rect_rotation = 270.0
rect_clip_content = true
theme = ExtResource( 8 )
shortcut_in_tooltip = false
clip_text = true

[node name="TXT_L" type="RichTextLabel" parent="."]
margin_left = 86.0
margin_top = 218.0
margin_right = 342.0
margin_bottom = 426.0
rect_rotation = -90.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]3[/center]"
text = "3"
scroll_active = false

[node name="TXT_O" type="RichTextLabel" parent="."]
margin_left = 85.0
margin_top = 505.0
margin_right = 311.0
margin_bottom = 711.0
rect_rotation = -90.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]1[/center]"
text = "1"
scroll_active = false

[node name="TXT_BARRA" type="RichTextLabel" parent="."]
margin_left = 89.0
margin_top = 394.0
margin_right = 390.0
margin_bottom = 590.0
rect_rotation = -90.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]/[/center]"
text = "/"
scroll_active = false

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
